# libobs-rs

./: Cargo.toml
cargo-obs-build/: Cargo.toml
libobs-bootstrapper/src/: lib.rs
libobs-wrapper/: Cargo.toml
