[workspace]
resolver = "2"
members = [
    "cargo-obs-build",
    "libobs",
    "libobs-simple-macro",
    "libobs-simple",
    "libobs-window-helper",
    "libobs-wrapper",
    "libobs-bootstrapper",
    "examples/*"
]
exclude = ["scripts/test_assets/test_cargo_obs_build", "scripts/test_assets/test_bootstrapping"]

[workspace.dependencies]
# Workspace members
libobs = { path = "./libobs", version = "5" }
libobs-wrapper = { path = "./libobs-wrapper", version = "9", default-features = false }
libobs-simple-macro = { path = "./libobs-simple-macro", version = "7" }
libobs-simple = { path = "./libobs-simple", version = "8" }
libobs-window-helper = { path = "./libobs-window-helper", version = "0.4" }
libobs-bootstrapper = { path = "./libobs-bootstrapper", version = "0.3" }

# Error handling, logging, utilities
anyhow = "1.0.102"  # Minimum version with improved error trait support
chrono = "0.4"
colored = "3"
env_logger = "0.11"
hex = "0.4"
indicatif = "0.18"
lazy_static = "1"
log = "0.4"
paste = "1"
vsprintf = "2"

# Serialization and parsing
serde = "1"
serde_json = "1"

# Async, networking, crypto
tokio = { version = "1.49", default-features = false }  # Minimum version with create_new and async coroutine support
reqwest = "0.13"
sha2 = "0.10"

# Platform/FFI/windowing
display-info = "0.5"
libloading = "0.9"
num-derive = "0.4.2"  # Minimum version without non-local-definitions lint issues
num-traits = "0.2"
winit = "0.30"
windows = "0.62"


[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/libobs-rs/libobs-rs-lints", rev ="c8b7a7f29b8f5a8b6ef1cd3134cdf2d47635265d"  },
]
