[package]
name = "libobs-wrapper"
description = "A safe wrapper around libobs"
version = "9.0.4+32.0.2"
repository = "https://github.com/libobs-rs/libobs-rs"
documentation = "https://libobs-rs.github.io/libobs-rs/libobs_wrapper/"
readme = "README.md"
authors = ["Hendrik Lind <hendrik@sshcrack.me>"]
categories = [
    "multimedia::video",
    "multimedia::audio",
    "multimedia",
    "multimedia::encoding",
]
keywords = ["obs", "libobs", "video", "recording", "screen-recording"]
license = "GPL-3.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
libobs = { workspace = true, features = [] }
display-info = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
vsprintf = { workspace = true }
chrono = { workspace = true }
getters0 = "0.1.1"
colored = { workspace = true, optional = true }
oneshot = { version = "0.2", default-features = false, features = ["std"] }
arboard = { version = "3", optional = true }
dialog = { version = "0.3", optional = true }
paste = { workspace = true }
duplicate = "2"
tokio = { workspace = true, default-features = false, features = ["sync"] }
libc = "0.2"
bitflags = "2.11"

[target.'cfg(target_os="linux")'.dependencies]
glib = "0.21"
libloading = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Security"
] }

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]

[features]
default = ["color-logger", "dialog_crash_handler", "enable_runtime"]
no_blocking_drops = ["tokio/rt"]
generate_bindings = ["libobs/generate_bindings"]
color-logger = ["dep:colored"]
enable_runtime = []
dialog_crash_handler = ["dep:arboard", "dep:dialog"]
logging_crash_handler = []
__test_environment = []
